Migrated to Kotlin. Added CUSTOMER functionality.

--- a/src/main/resources/templates/base-layout.html
+++ b/src/main/resources/templates/base-layout.html
@@ -5,7 +5,7 @@
 
 <body>
 
-<header class="centered" th:if="${message}" th:text="${message}"></header>
+<header class="centered-text" th:if="${message}" th:text="${message}"></header>
 
 <main th:include="${view}"></main>
 
