--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,8 +2,8 @@ body {
     font-family: Lato, sans-serif;
     font-size: 24px;
     /*background: linear-gradient(to right, #780206, #061161);*/
-    background: linear-gradient(to right, #000000, #53346d);
-    color: #FFFFFF;
+    background: linear-gradient(to right, #000000, #E5DE44);
+    color: #FFF;
 }
 h1, h2 {
     text-align: center;
@@ -26,7 +26,7 @@ input {
     border-radius: 5px;
     outline: none;
     margin: 4px 0 10px 0;
-    color: #FFFFFF;
+    color: #FFF;
     text-align: left;
 }
 label {
@@ -54,7 +54,6 @@ table {
     overflow-x: auto;
     width: 100%;
     margin: 30px 0;
-
     table-layout: auto;
 }
 
@@ -63,14 +62,18 @@ th, td {
     padding: 15px 20px;
 }
 
-tr{
-    background-color: #0b8793;
+/*tr:first-child {*/
+    /*background-color: #F0810E !important;*/
+/*}*/
+tr:nth-child(odd) {
+    background-color: #001A27 !important;
+}
+tr:nth-child(even) {
+    background-color: #053752 !important;
 }
 
 th {
-    background-color: #D38312;
-    color: white;
-
+    background-color: #F0810E !important;
 }
 .edit {
     background:#b6fbff;
@@ -78,7 +81,6 @@ th {
 }
 .delete {
     background: #f83600;
-    color: #FFFFFF;
 }
 .accept {
     background: #b6fbff;
@@ -86,7 +88,6 @@ th {
 }
 .cancel {
     background: #f83600;
-    color: #FFFFFF;
 }
 
 .add-new {
@@ -109,11 +110,13 @@ th {
 .tick {
     height: 30px;
 }
-.centered {
+.centered-text {
     text-align: center;
 }
-
-
+.create {
+    background: lightblue;
+    color: #000000;
+}
 
 
 
