--- a/src/main/resources/templates/car/order.html
+++ b/src/main/resources/templates/car/order.html
@@ -3,9 +3,9 @@
         <table>
 
             <tr>
-                <th>Изтинска Снимка</th>
+                <th>Истинска Снимка</th>
                 <th>Име</th>
-                <th>Цена На Ден</th>
+                <th>Цена На Ден (лев)</th>
             </tr>
 
             <tr>
@@ -16,7 +16,7 @@
                 <td th:text="${car.price}"></td>
             </tr>
             <!--Horisontal line-->
-            <tr style="border-bottom:1px solid black">
+            <tr>
                 <td colspan="100%"></td>
             </tr>
 
@@ -58,22 +58,22 @@
             </tr>
 
 
-            <tr style="background-color: #D38312">
+            <tr>
                 <td colspan="2">
                     <a>Тук са пълните условия</a>
                 </td>
                 <td>
-                    <button class="centered"><a href="https://drive.google.com/uc?export=download&amp;id=1VqlTGN6csN1KcLiStmg10v5IvlQJRP-Z">Свали</a></button>
+                    <button class="centered-text"><a href="https://drive.google.com/uc?export=download&amp;id=1VqlTGN6csN1KcLiStmg10v5IvlQJRP-Z">Свали</a></button>
                 </td>
             </tr>
 
-            <tr style="background-color: chocolate">
+            <tr>
                 <td>
                     Адресът на взимане на колата е
                 </td>
                 <td>
                     <div class="popup" onclick="popUp()">
-                        <button class="centered">
+                        <button class="centered-text">
                             Покажи
                             <span class="popuptext" id="myPopUp">
                                 България, София, ж.к. Надежда, улица "Подпоручик Футеков 1",<br/>
@@ -85,11 +85,11 @@
                     </div>
                 </td>
                 <td>
-                    <button th:onclick="'location.href = \'' + @{/taking_place} + '\''" class="centered">Виж на картата</button>
+                    <button th:onclick="'location.href = \'' + @{/taking_place} + '\''" class="centered-text">Виж на картата</button>
                 </td>
             </tr>
 
-            <tr style="background-color: #53346d">
+            <tr>
                 <td colspan="3">
                     За да е лесно - ако искате да поръчате кола<br/> - просто се обадете на <b>+359 899 588830</b>
                 </td>
@@ -98,7 +98,7 @@
         </table>
 
 
-        <div class="centered">
+        <div class="centered-text">
             <button type="button"><a style="text-decoration: none" href="tel:+359899588830">Обадете ни се</a></button>
             <button type="button" th:onclick="'location.href = \'' + @{/} + '\''" class="cancel">Отказ
             </button>
