--- a/src/main/resources/templates/customer/delete_customer.html
+++ b/src/main/resources/templates/customer/delete_customer.html
@@ -12,7 +12,7 @@
 
             <div class="centered-text">
                 <button class="accept" type="submit">Изтрий</button>
-                <button type="button" th:onclick="'location.href = \'' + @{/} + '\''" class="cancel">Отказ</button>
+                <button type="button" th:onclick="'location.href = \'' + @{/all_customers} + '\''" class="cancel">Отказ</button>
             </div>
         </div>
     </form>
