Added mapping for available cars.

--- a/src/main/resources/templates/car/book.html
+++ b/src/main/resources/templates/car/book.html
@@ -1,11 +1,11 @@
-<section xmlns:th="http://www.w3.org/1999/xhtml">
+<section>
     <div>
         <table>
 
             <tr>
-                <th>Истинска Снимка</th>
+                <th>Истинска<br/>Снимка</th>
                 <th>Име</th>
-                <th>Цена На Ден (лев)</th>
+                <th>Цена На<br/>Ден (€)</th>
             </tr>
 
             <tr>
