--- a/src/main/resources/templates/car/all.html
+++ b/src/main/resources/templates/car/all.html
@@ -1,13 +1,13 @@
 <h1>Всички коли</h1>
 
-<section xmlns:th="http://www.w3.org/1999/xhtml">
+<section>
     <div>
         <table>
 
             <tr>
-                <th>Истинска Снимка</th>
+                <th>Истинска <br/>Снимка</th>
                 <th>Име</th>
-                <th>Цена На Ден (лев)</th>
+                <th>Цена За <br/>Период (лев)</th>
                 <th>Поръчай</th>
             </tr>
 
