--- a/src/main/resources/templates/car/delete.html
+++ b/src/main/resources/templates/car/delete.html
@@ -1,6 +1,6 @@
 <h1>Изтрий Кола</h1>
 <section>
-    <form th:action="@{/delete/{id}(id=${car.id})}" method="POST">
+    <form th:action="@{/admin/car/delete/{id}(id=${car.id})}" method="POST">
         <div>
             <label for="name">Име</label>
             <input type="text" id="name" name="name" th:value="${car.name}" disabled="disabled" />
