--- a/src/main/resources/templates/car/edit.html
+++ b/src/main/resources/templates/car/edit.html
@@ -1,6 +1,6 @@
 <h1>Редактирай Кола</h1>
 <section>
-    <form th:action="@{/edit/{id}(id=${car.id})}" method="POST">
+    <form th:action="@{/admin/car/edit/{id}(id=${car.id})}" method="POST">
         <div>
             <label for="name">Име</label>
             <input type="text" id="name" name="name" th:value="${car.name}" />
