--- a/src/main/resources/templates/car/create.html
+++ b/src/main/resources/templates/car/create.html
@@ -11,9 +11,8 @@
             <label for="imgURL">URL на картинка</label>
             <input type="text" id="imgURL" name="imgURL" th:value="${car.imgURL}"/>
 
-            <div class="centered-text">
+            <div>
                 <button class="accept" type="submit">Създай</button>
-                <button type="button" th:onclick="'location.href = \'' + @{/} + '\''" class="cancel">Отказ</button>
             </div>
         </div>
     </form>
