--- a/src/main/resources/templates/customer/all.html
+++ b/src/main/resources/templates/customer/all.html
@@ -1,7 +1,7 @@
 <h1 xmlns:th="http://www.w3.org/1999/xhtml">Всички Клиенти</h1>
 
 <div>
-    <button type="button" th:onclick="'location.href = \'' + @{/create_customer} + '\''" class="centered-text create">Създай</button>
+    <button type="button" th:onclick="'location.href = \'' + @{/create_customer} + '\''">Създай</button>
 </div>
 
 <section xmlns:th="http://www.w3.org/1999/xhtml">
