--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
             <label for="daterange">Период</label>
             <input type="text" id="daterange" name="daterange" required="required"/>
 
-            <div class="centered-text">
+            <div>
                 <button class="accept" type="button" onclick="searchCars('daterange')">Потърси</button>
             </div>
         </div>
