--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,11 +2,15 @@ body {
     font-family: Lato, sans-serif;
     font-size: 24px;
     /*background: linear-gradient(to right, #780206, #061161);*/
-    background: linear-gradient(to right, #FFF, #926290);
-    /*color: #FFF;*/
+    background: linear-gradient(to right, #ACD58A, #71BE40);
+    color: white;
+    text-align: center !important;
 }
-h1, h2 {
-    text-align: center;
+/*h1, h2 {*/
+    /*text-align: center;*/
+/*}*/
+section table {
+    text-align: center !important;
 }
 
 section {
@@ -18,22 +22,22 @@ section {
 section div {
     /*max-width: 60%;*/
 }
-/*input {*/
-    /*display: block;*/
-    /*padding: 15px 90px 15px 10px;*/
-    /*background: rgba(96,108,136, 0.5);*/
-    /*border: none;*/
-    /*border-radius: 5px;*/
-    /*outline: none;*/
-    /*margin: 4px 0 10px 0;*/
-    /*color: #FFF;*/
-    /*text-align: left;*/
-/*}*/
+section input {
+    display: block;
+    padding: 15px 90px 15px 10px;
+    background: rgba(96,108,136, 0.5);
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    margin: 4px 0 10px 0;
+    color: #FFF;
+    text-align: left;
+}
 label {
     display: block;
 }
 
-.medium-size {
+img {
     height: 230px;
 }
 
@@ -57,7 +61,7 @@ section table {
 }
 
 section th, section td {
-    text-align: center;
+    /*text-align: center;*/
     padding: 15px 20px;
 }
 
@@ -65,24 +69,24 @@ section th, section td {
     /*background-color: #F0810E !important;*/
 /*}*/
 section tr:nth-child(odd) {
-    background-color: #F9EFE9;
+    background-color: #0465B2;
 }
 section tr:nth-child(even) {
-    background-color: #F3DFCD;
+    background-color: #00ACAC;
 }
 
 /*.button-cancel {*/
     /**/
 /*}*/
 button, section th {
-    background-color: #4A2748;
+    background-color: #21409A;
 }
 
 
 .add-new {
     padding: 15px 0;
     text-decoration: none;
-    color: #000000;
+    /*color: #000000;*/
     width: 200px;
     /*background: #b3ffab;*/
     border: none;
@@ -96,11 +100,6 @@ button, section th {
 .tick {
     height: 30px;
 }
-.centered-text {
-    text-align: center;
-}
-
-
 
 
 /* Popup container - can be anything you want */
@@ -120,7 +119,7 @@ button, section th {
     width: 550px;
     background-color: #555;
     color: #fff;
-    text-align: center;
+    /*text-align: center;*/
     border-radius: 6px;
     padding: 8px 0;
     position: absolute;
@@ -172,4 +171,28 @@ input:invalid+span:after {
 input:valid+span:after {
     content: '✓';
     padding-left: 5px;
+}
+#daterange {
+    color: black;
+}
+
+footer {
+    position:fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    margin-top: 40px;
+    /*text-align: center;*/
+}
+
+a {
+    text-decoration: none;
+}
+
+.invisible {
+    display: none;
+}
+main {
+    padding-bottom: 50px;
 }
