--- a/src/main/resources/templates/customer/create.html
+++ b/src/main/resources/templates/customer/create.html
@@ -8,10 +8,9 @@
             <label for="phoneNumber">Телефон</label>
             <input type="text" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}" />
 
-           <div class="centered-text">
+           <div>
                 <button class="accept" type="submit">Създай</button>
-                <button type="button" th:onclick="'location.href = \'' + @{/all_customers} + '\''" class="cancel">Отказ</button>
-            </div>
+           </div>
         </div>
     </form>
 </section>
