--- a/src/main/resources/templates/customer/delete.html
+++ b/src/main/resources/templates/customer/delete.html
@@ -10,9 +10,8 @@
             <input type="text" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}" disabled="disabled" />
 
 
-            <div class="centered-text">
+            <div>
                 <button class="accept" type="submit">Изтрий</button>
-                <button type="button" th:onclick="'location.href = \'' + @{/all_customers} + '\''" class="cancel">Отказ</button>
             </div>
         </div>
     </form>
