--- a/src/main/resources/templates/car/available.html
+++ b/src/main/resources/templates/car/available.html
@@ -3,11 +3,10 @@
 <section>
     <div>
         <table>
-            <tr>
-                <!-- Rows 2 and 3 -->
-                <th:block th:include="fragments/whatIncludes"></th:block>
-                <th:block th:include="fragments/takingAddress"></th:block>
-            </tr>
+            <th:block th:include="fragments/paramShowDates"></th:block>
+            <th:block th:include="fragments/whatIncludes"></th:block>
+            <th:block th:include="fragments/takingAddress"></th:block>
+            <th:block th:include="fragments/showPriceDependency"></th:block>
         </table>
         <table>
             <tr>
