--- a/src/main/resources/templates/car/inclusions.html
+++ b/src/main/resources/templates/car/inclusions.html
@@ -46,7 +46,7 @@
 
             <tr>
                 <td colspan="2">
-                    <a>Тук са пълните условия</a>
+                    <p>Тук са пълните условия</p>
                 </td>
                 <td>
                     <button><a href="https://drive.google.com/uc?export=download&amp;id=1VqlTGN6csN1KcLiStmg10v5IvlQJRP-Z">Свали</a></button>
