--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,9 +1,8 @@
 <footer>
     <section>
         <div>
-            <button type="button"><a style="text-decoration: none" href="tel:+359899588830">Обадете ни се</a></button>
-            <button type="button" th:onclick="@{window.history.back();}" class="cancel">Отказ
-            </button>
+            <button type="button"><a href="tel:+359899588830" style="text-decoration: none;">Обадете ни се</a></button>
+            <button type="button" th:onclick="@{window.history.back();}" class="cancel">Назад</button>
         </div>
     </section>
 </footer>
