--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,3 +13,6 @@
 </section>
 
 <script th:src="@{/js/searchCars.js}"></script>
+<script>
+    document.getElementsByClassName('daterangepicker')[0].style.color = 'black';
+</script>
