--- a/src/main/resources/templates/thankYou.html
+++ b/src/main/resources/templates/thankYou.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-</head>
-<body>
- Mersiiiiiiiiiiiiiiiiiiii
-zapazena poruchka
-</body>
-</html>
+<h1>Благодаря ви!</h1>
+<section>
+    <div>
+        <table>
+            <tr><td colspan="100%">Вие успешно си поръчахте кола при нас!</td></tr>
+            <tr><td colspan="100%">Скоро ще ви се обадим!</td></tr>
+
+            <th:block th:include="fragments/takingAddress"></th:block>
+        </table>
+    </div>
+</section>
