--- a/src/main/resources/templates/base-layout.html
+++ b/src/main/resources/templates/base-layout.html
@@ -1,15 +1,17 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head th:include="fragments/head" th:with="pageTitle='Rent a Car Sofia'"></head>
+    <head th:include="fragments/head" th:with="pageTitle='Rent a Car Sofia'"></head>
 
-<body>
+    <body>
+        <header th:if="${message}" th:text="${message}"></header>
 
-<header th:if="${message}" th:text="${message}"></header>
+        <main>
+            <article>
+                <div th:include="${view}"></div>
+            </article>
+        </main>
 
-<main th:include="${view}"></main>
-
-<footer th:include="fragments/footer"></footer>
-
-</body>
+        <footer th:include="fragments/footer"></footer>
+    </body>
 </html>
