--- a/src/main/resources/templates/fragments/whatIncludes.html
+++ b/src/main/resources/templates/fragments/whatIncludes.html
@@ -1,6 +1,6 @@
 <tr>
     <td colspan="2">
-        <a>За да видите какво включва цената</a>
+        <p>За да видите какво включва цената</p>
     </td>
     <td>
         <button type="button" th:onclick="'location.href = \'' + @{/car/inclusions} + '\''">Натиснете тук</button>
