--- a/src/main/resources/templates/customer/all.html
+++ b/src/main/resources/templates/customer/all.html
@@ -1,7 +1,7 @@
 <h1 xmlns:th="http://www.w3.org/1999/xhtml">Всички Клиенти</h1>
 
 <div>
-    <button type="button" th:onclick="'location.href = \'' + @{/create_customer} + '\''">Създай</button>
+    <button type="button" th:onclick="'location.href = \'' + @{/admin/customer/create} + '\''">Създай</button>
 </div>
 
 <section xmlns:th="http://www.w3.org/1999/xhtml">
@@ -18,7 +18,7 @@
                 <td th:text="${customer.name}"></td>
                 <td th:text="${customer.phoneNumber}"></td>
                 <td>
-                    <button th:onclick="'location.href = \'' + @{/delete_customer/{id}(id=${customer.id})} + '\''" class="delete centered-text">Изтрий</button>
+                    <button th:onclick="'location.href = \'' + @{/admin/customer/{id}/delete(id=${customer.id})} + '\''" class="delete centered-text">Изтрий</button>
                 </td>
             </tr>
             </th:block>
