--- a/src/main/resources/templates/fragments/tableHeadCommon.html
+++ b/src/main/resources/templates/fragments/tableHeadCommon.html
@@ -1,3 +1,2 @@
-<th>Истинска<br/>Снимка</th>
-<th>Име</th>
+<th:block th:include="fragments/tableHeadImageName"></th:block>
 <th>Цена На<br/>Ден (&euro;)</th>
