--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Lato, sans-serif;
-    font-size: 24px;
+    font-size: 28px;
     /*background: linear-gradient(to right, #780206, #061161);*/
     background: linear-gradient(to right, #ACD58A, #71BE40);
     color: white;
@@ -26,7 +26,7 @@ section div {
 }
 section input {
     display: block;
-    padding: 15px 90px 15px 10px;
+    padding: 25px 105px 25px 15px;
     background: rgba(96,108,136, 0.5);
     border: none;
     border-radius: 5px;
@@ -184,4 +184,14 @@ main {
 }
 a, a:hover {
     color: inherit;
+}
+.flex-box {
+    display:flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.container {
+    color: black;
+    text-align: left;
 }
