--- a/src/main/resources/templates/admin/options.html
+++ b/src/main/resources/templates/admin/options.html
@@ -2,6 +2,8 @@
     <div>
         <h1>Опции</h1>
     </div>
+</section>
+<section>
     <div>
         <div>
             <button onclick="location.href='/admin/car/all'">Коли</button>
