--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,8 @@
     <div>
         <h2>Снимки на колите</h2>
     </div>
+</section>
+<section>
     <div class="flex-box">
         <th:block th:each="car : ${cars}">
             <img th:src="${car.imgURL}"/>
