--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,12 @@
 <footer>
     <section>
         <div>
-            <button type="button"><a id="callReference" href="tel:+359899588830" style="text-decoration: none;">Обадете ни се</a></button>
+            <button type="button">
+                <a id="callReference" href="tel:+359899588830" style="text-decoration: none;">
+                    <img id="callImage" src="http://freevector.co/wp-content/uploads/2011/12/60720-phone-call-button.png"/>
+                    +359899588830
+                </a>
+            </button>
             <button type="button" th:onclick="@{window.history.back();}" class="cancel">Назад</button>
         </div>
     </section>
