--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -159,13 +159,6 @@ input:valid+span:after {
     content: '✓';
     padding-left: 5px;
 }
-/*#daterange {*/
-    /*color: black;*/
-/*}*/
-
-/*.daterangepicker .dropdown-menu .ltr .show-calendar .opensright{*/
-    /*color: black;*/
-/*}*/
 
 footer {
     position:fixed;
@@ -176,9 +169,6 @@ footer {
     margin-top: 40px;
 }
 
-.invisible {
-    display: none;
-}
 main {
     padding-bottom: 70px;
 }
@@ -194,4 +184,7 @@ a, a:hover {
 .container {
     color: black;
     text-align: left;
+}
+#callImage {
+    max-height: 30px;
 }
