Added rented car repo and requested for renting repo. Added /admin/car/edit. Updated searching system.

--- a/src/main/resources/templates/admin/customer/delete.html
+++ b/src/main/resources/templates/admin/customer/delete.html
@@ -3,15 +3,15 @@
     <div>
         <form th:action="@{/admin/customer/{id}/delete(id=${customer.id})}" method="POST">
             <div>
+
                 <label for="name">Име</label>
                 <input type="text" id="name" name="name" th:value="${customer.name}" disabled="disabled" />
 
                 <label for="phoneNumber">Телефон</label>
                 <input type="text" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}" disabled="disabled" />
 
-
                 <div>
-                    <button class="accept" type="submit">Изтрий</button>
+                    <button type="submit">Изтрий</button>
                 </div>
             </div>
         </form>
