--- a/src/main/resources/templates/admin/options.html
+++ b/src/main/resources/templates/admin/options.html
@@ -12,7 +12,10 @@
             <button onclick="location.href='/admin/customer/all'">Клиенти</button>
         </div>
         <div>
-            <button onclick="location.href='/admin/customer/requests'">Заявки</button>
+            <button onclick="location.href='/admin/bookRequest/all'">Заявки</button>
+        </div>
+        <div>
+            <button onclick="location.href='/admin/booking/all'">История</button>
         </div>
     </div>
 </section>
