--- a/src/main/resources/templates/base-layout.html
+++ b/src/main/resources/templates/base-layout.html
@@ -1,10 +1,15 @@
 <!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 
     <head th:include="fragments/head" th:with="pageTitle='Rent a Car Sofia'"></head>
 
-    <body>
-        <header th:if="${message}" th:text="${message}"></header>
+    <body th:inline="text">
+        <header>
+            <div>
+                <p th:if="${message}" th:text="${message}"></p>
+            </div>
+        </header>
 
         <main>
             <article>
