--- a/src/main/resources/templates/car/search.html
+++ b/src/main/resources/templates/car/search.html
@@ -2,11 +2,14 @@
 <section>
     <form th:action="@{/car/search}">
         <div>
-            <label for="daterange">Период</label>
-            <input type="text" id="daterange" name="daterange" required="required"/>
+            <label for="startDate">Дата на взимане</label>
+            <input type="text" id="startDate" name="startDate" required="required"/>
+
+            <label for="endDate">Дата на връщане</label>
+            <input type="text" id="endDate" name="endDate" required="required"/>
 
             <div>
-                <button class="accept" type="button" onclick="searchCars('daterange')">Потърси</button>
+                <button type="button" onclick="searchCars('startDate', 'endDate')">Потърси</button>
             </div>
             <div class="container">
                 <h2 style="color: white !important;text-align: center !important;">За да потърсите автомобили налични за някакъв период:</h2>
@@ -23,4 +26,5 @@
 <script th:src="@{/js/searchCars.js}"></script>
 <script>
     document.getElementsByClassName('daterangepicker')[0].style.color = 'black';
+    document.getElementsByClassName('daterangepicker')[1].style.color = 'black';
 </script>
