--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -13,4 +13,6 @@
     <script th:src="@{/js/popUp.js}"></script>
 
     <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+=
 </head>
